basic cli interface

--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "convert-to-lerna",
   "version": "0.0.1",
   "description": "CLI to convert an existing repo to a lerna monorepo",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "convert-to-lerna": "./cli.js"
   },
   "author": "Alasdair McLeay",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^2.3.1",
+    "commander": "^2.14.1"
+  }
 }
